# ForumRS

./: .gitignore  Cargo.toml
public/css/setup/: setup.css  welcome.css
public/js/setup/: general.js  login.js  security.js  storage.js
src/: main.rs  settings.rs  state.rs
src/schema/: DBSetup.rs  database.rs  general.rs  mod.rs  tables.rs  users.rs
src/setup/: mod.rs  setup.rs  setup_router.rs
views/setup/: accountcreation.hbs  existingstorage.hbs  finished.hbs  general.hbs  login.hbs  security.hbs  storage.hbs  welcome.hbs
