[package]
name = "ForumRS"
version = "0.1.0"
authors = ["Ryandw11 <ryandw11@ryandw11.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
diesel = { version = "1.4.4", features = ["sqlite", "mysql"] }