[package]
name = "ForumRS"
version = "0.1.0"
authors = ["Ryandw11 <ryandw11@ryandw11.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = {version = "3", features = ["secure-cookies"]}
actix-files = "0.5.0"
diesel = { version = "1.4.4", features = ["sqlite", "mysql"] }
toml="0.5.8"
serde = "1.0.126"
serde_json = "1.0.66"
handlebars = {version = "4.1.0", features = ["dir_source", "script_helper"]}
uuid = { version = "0.8", features = ["serde", "v4"] }
regex = "1.5.4"